Rework NPI creation/edition rework field organisation
